--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,27 @@
 #
 #    pip-compile
 #
+backports.entry-points-selectable==1.1.0
+    # via virtualenv
+certifi==2021.10.8
+    # via requests
+cfgv==3.3.1
+    # via pre-commit
+charset-normalizer==2.0.7
+    # via requests
 click==8.0.1
     # via pip-tools
+distlib==0.3.3
+    # via virtualenv
+filelock==3.3.0
+    # via virtualenv
+identify==2.3.0
+    # via pre-commit
+idna==3.2
+    # via requests
 jinja2==3.0.1
+    # via -r requirements.in
+lxml==4.6.3
     # via -r requirements.in
 markupsafe==2.0.1
     # via jinja2
@@ -14,12 +32,32 @@ musicbrainzngs==0.7.1
     # via -r requirements.in
 mutagen==1.45.1
     # via -r requirements.in
+nodeenv==1.6.0
+    # via pre-commit
 pep517==0.11.0
     # via pip-tools
 pip-tools==6.3.0
     # via -r requirements.in
+platformdirs==2.4.0
+    # via virtualenv
+pre-commit==2.15.0
+    # via -r requirements.in
+pyyaml==5.4.1
+    # via pre-commit
+requests==2.26.0
+    # via -r requirements.in
+six==1.16.0
+    # via
+    #   -r requirements.in
+    #   virtualenv
+toml==0.10.2
+    # via pre-commit
 tomli==1.2.1
     # via pep517
+urllib3==1.26.7
+    # via requests
+virtualenv==20.8.1
+    # via pre-commit
 wheel==0.37.0
     # via pip-tools
 
